Bug 69126 	Modify login page.        	1. both username and password labels should be right aligned. 	2. add 4px round corner for Login Button. 	3. Add client notice as the same as web client.
http://bugzilla.zimbra.com/show_bug.cgi?id=69126

--- a/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
+++ b/ZimbraWebClient/WebRoot/admin_skins/serenity/skin.css
@@ -431,6 +431,10 @@ body {
     color:@darken(AppC,55)@;
 }
 
+.form td {
+    text-align: right;
+}
+
 /*Splash Screen Only Items*/
 .SplashScreen .content {
     color:@LoginLabelColor@;
@@ -522,8 +526,9 @@ body {
     @VertSeparator@;
 }
 #ZLoginButton{
-  background-color: #ffffff;
-  float:right;
+    background-color: #ffffff;
+    float:right;
+    @roundCorners(4px)@;
 }
 
 .redAsteric {
